Fixed bug #70997 (When using parentClass:: instead of parent::, static context changed)